[tool.poetry]
name = "ava-st"
version = "0.1.0"
description = ""
authors = ["Ken Harlbar <balotech514@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.37"
llama-index-vector-stores-mongodb = "^0.1.5"
streamlit = "^1.34.0"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-llms-llama-api = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
